# nanovision

./: .gitignore  AGENTS.md  STRATEGY.md  pyproject.toml
dataset_creation/: README.md
dataset_creation/nanovision_dataset/: __init__.py  cli.py  grayscale.py  inspect.py  minatar_source.py  pgx_source.py  writer.py
dev/: nano-pixel-rl-meltdown.md
docs/plans/: 2026-07-01-001-feat-minatar-frame-dataset-creation-plan.md  2026-07-01-002-feat-pgx-minatar-agent-dataset-plan.md  2026-07-01-003-perf-batched-pgx-rollout-dataset-plan.md  2026-07-01-004-feat-pgx-reset-lane-stream-dataset-plan.md
tests/dataset_creation/: test_cli.py  test_grayscale.py  test_inspect.py  test_minatar_source.py  test_pgx_source.py  test_scaffold.py  test_writer.py
